# zk-languages

./: LICENSE  README.md
aleo/: README.md
aleo/multiply/: README.md
aleo/multiply/inputs/: multiply.in
cairo/: README.md
cairo/contract/: Scarb.toml
cairo/multiply/: Scarb.toml
cairo/standalone/: Scarb.toml
circom/: .gitignore  README.md
circom/multiply/: input.json  multiply.circom
circom/standalone/: multiply.circom
compact/: .gitignore  README.md
compact/contract/: multiply.compact
keelung/: .gitignore  README.md
keelung/multiply/: CHANGELOG.md  cabal.project  multiply.cabal  package.yaml  stack.yaml
leo/: .gitignore  README.md
leo/contract/: .gitignore  program.json
leo/multiply/: .env  .gitignore  program.json
leo/standalone/: .gitignore  program.json
lurk/: .gitignore  README.md
noir/: README.md
noir/contract/: Nargo.toml
noir/multiply/: Nargo.toml  Prover.toml
noir/standalone/: Nargo.toml
noname/: README.md
noname/multiply/: .gitignore
noname/standalone/: Noname.toml
o1js/: README.md
o1js/contract/: .gitignore  README.md  config.json  package-lock.json  package.json
o1js/multiply/: package-lock.json  package.json  verificationKey.json
o1js/standalone/: package-lock.json
polylang/: .gitignore  README.md
powdr/: README.md
powdr/multiply/: .gitignore  a.sh  multiply.asm
powdr/standalone/: multiply.asm
zirgen/: .gitignore  BUILD.bazel  Build.bazel  README.md  WORKSPACE  environment.yml  fibonacci.zir
zirgen/multiply/: multiply.zir
zokrates/: README.md
zokrates/multiply/: .gitignore  root.zok
(+35 files in other folders)
